--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,17 @@
-# application-default.properties
+# application.properties
 # ----------------------------------------------------------------------------
-# Spring application properties for profile default.
+# Global Spring application properties.
 # ----------------------------------------------------------------------------
+# Tell Spring to drop color in log output
+spring.output.ansi.enabled=never
 # enable all actuator endpoints
-management.endpoints.web.exposure.include=*
-
-
-
+management.endpoints.web.exposure.include=prometheus,health,info,metric
+management.endpoint.health.probes.enabled=true
+# JSON binding configuration
+# don't transfer any null values
+spring.jackson.default-property-inclusion=NON_NULL
+# logging configuration
+logging.pattern.console=%d{yyyy-MM-dd'T'HH:mm:ss.SSS} %5p --- [%15.15t] %-40.40logger{39} : [%X{userId}] [%X{traceId}] %m%n%wEx
+logging.level.org.springframework.security=INFO
+# observability configuration
+cnj.observability.rest.tracing.enabled=true
