--- a/src/test/docker/cnj-resilience-downstream-a/docker-compose.yml
+++ b/src/test/docker/cnj-resilience-downstream-a/docker-compose.yml
@@ -14,7 +14,8 @@ services:
       - "38080:8080"
       - "38089:8089"
     environment:
-      JAVA_OPTS: "-javaagent:/home/spring/org.jacoco.agent.jar=output=tcpserver,address=*,port=8089"
+      AGENT_JAVA_OPTS: "-javaagent:/home/spring/org.jacoco.agent.jar=output=tcpserver,address=*,port=8089"
+      DOCKER_JAVA_OPTS: "-Xms1g -Xmx1g"
 
 
 
