--- a/src/main/helm/cnj-resilience-downstream-a/values.yaml
+++ b/src/main/helm/cnj-resilience-downstream-a/values.yaml
@@ -19,20 +19,20 @@ container:
     image:
       repository: ${docker.image.name}
       tag: ${project.version}
-      pullPolicy: Always # IfNotPresent
+      pullPolicy: IfNotPresent
     ports:
       http:
         number: 8080
     probes:
       readiness:
-        path: /actuator/health
+        path: /actuator/health/readiness
       liveness:
-        path: /actuator/health
+        path: /actuator/health/liveness
     resources:
       limits:
         # since JVMs tend to spike during startup we don't provide a cpu limit
         # cpu: 500m
-        memory: 1Gi
+        memory: 756Mi
       requests:
         cpu: 250m
         memory: 756Mi
@@ -51,8 +51,8 @@ service:
 
 ingress:
   enabled: true
-  class: traefik
-  type: traefik
+  class: nginx
+  type: nginx
   host: "${k8s.ingress.host}"
   path: "${k8s.ingress.path}"
   pathType: Prefix
@@ -82,12 +82,6 @@ podDisruptionBudget:
   minUnavailable: 1
   # minAvailable: 1
 
-# security configuration (Open ID Connect)
-security:
-  oidc:
-    jwksUri: "https://oidc.cloudtrain.aws.msgoat.eu/auth/realms/cloudtrain/protocol/openid-connect/certs"
-    issuer: "https://oidc.cloudtrain.aws.msgoat.eu/auth/realms/cloudtrain"
-
 # metrics configuration
 metrics:
   # controls if pods are annotated for scraping
@@ -97,12 +91,3 @@ metrics:
   serviceMonitor:
     # installs a prometheus-operator service monitor CRD when true
     enabled: true
-
-# tracing configuration
-tracing:
-  enabled: true
-  jaeger:
-    agent:
-      host: jaeger-agent.tracing
-      port: 6831
-    logSpans: true
