--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,11 @@
             <artifactId>cnj-common-observability-spring</artifactId>
             <version>${cnj.common.observability.version}</version>
         </dependency>
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
+            <version>${micrometer.version}</version>
+        </dependency>
         <!-- showcase specific section -->
         <!-- =========================== -->
         <!-- test time dependencies      -->
