--- a/src/test/docker/cnj-resilience-downstream-a/docker-compose.yml
+++ b/src/test/docker/cnj-resilience-downstream-a/docker-compose.yml
@@ -16,6 +16,8 @@ services:
     environment:
       AGENT_JAVA_OPTS: "-javaagent:/home/spring/org.jacoco.agent.jar=output=tcpserver,address=*,port=8089"
       DOCKER_JAVA_OPTS: "-Xms1g -Xmx1g"
+      SPRING_PROFILES_ACTIVE: "default"
+
 
 
 
